...
        }}
      />
      <Tabs.Screen
        name="relatorios"
        options={{
          title: 'Relatórios',
          tabBarButtonTestID: 'tab-relatorios',
          tabBarIcon: ({ color, size }) => <ChartLine size={size} color={color} weight="fill" />,
        }}
      />
      <Tabs.Screen
        name="configuracao"
        options={{
...
